--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -22,19 +22,17 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Bun
-        run: |
-          curl -fsSL https://bun.sh/install | bash -s -- --prefix /usr/local
-          echo "::add-path::${HOME}/.bun/bin"
+        uses: oven-sh/setup-bun@v2 / 
 
       - name: Install dependencies (bun)
         run: |
           cd frontend
-          ${home}/.bun/bin/bun install
+          bun install
 
       - name: build frontend (bun)
         run: |
           cd frontend
-          ${home}/.bun/bin/bun run build
+          bun run build
 
       - name: upload pages artifact
         uses: actions/upload-pages-artifact@v3
