--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Bun
-        uses: oven-sh/setup-bun@v2 / 
+        uses: oven-sh/setup-bun@v2 
 
       - name: Install dependencies (bun)
         run: |
