--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ rand = "0.9.2"
 reqwest = { version = "0.12.24", features = ["json"] }
 reqwest-eventsource = "0.6.0"
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
+sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
+dotenvy = "0.15.7"
