--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ reqwest-eventsource = "0.6.0"
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
 sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
 dotenvy = "0.15.7"
+uuid = { version = "1.18.1", features = ["v4"] }
