--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -15,6 +15,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.9
+      - name: Get toolchain
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: nightly
       - name: Build
         run: cargo build --release
         env:
